remove old files
working basic example, but lots of hardcoded

Add working translator and server that use native langflow types

Working vector rag

remove logs and fix basic example

...

with basic fusion working

fix fused names

fixing runtime inputs in fused steps

--- a/examples/langflow-components/stepflow-config.yml
+++ b/examples/langflow-components/stepflow-config.yml
@@ -3,5 +3,6 @@ plugins:
     type: builtin
   - name: langflow
     type: stdio
-    command: uv
-    args: ["--project", "../../sdks/langflow", "run", "python", "langflow_component_server_udf_only.py"]
+    command: /Users/jordan.frazier/Documents/StepFlow/stepflow/.venv/bin/uv
+    args: ["--project", "/Users/jordan.frazier/Documents/StepFlow/stepflow/sdks/langflow", "run", "python", "langflow_component_server_udf_only.py"]
+    inherit_env: true
