--- a/sdks/langflow/pyproject.toml
+++ b/sdks/langflow/pyproject.toml
@@ -7,7 +7,7 @@ authors = []
 requires-python = ">=3.13"
 dependencies = [
     "stepflow-sdk",
-    "langflow==1.5.0",
+    "langflow>=1.5.0",
 ]
 
 [dependency-groups]
