--- a/examples/data-pipeline/debug-pipeline.yaml
+++ b/examples/data-pipeline/debug-pipeline.yaml
@@ -14,56 +14,56 @@ input_schema:
 steps:
   # Parallel data processing steps
   - id: sum_revenue_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
           code: "sum(item['revenue'] for item in input['sales_data'])"
 
   - id: calculate_total_revenue
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: sum_revenue_udf }, path: "blob_id" }
       input:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: count_sales_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
           code: "len(input['sales_data'])"
 
   - id: count_sales
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: count_sales_udf }, path: "blob_id" }
       input:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: average_sale_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
           code: "sum(item['revenue'] for item in input['sales_data']) / len(input['sales_data']) if input['sales_data'] else 0"
 
   - id: calculate_average_sale
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: average_sale_udf }, path: "blob_id" }
       input:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: divide_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
           code: "input['a'] / input['b'] if input['b'] != 0 else 0"
 
   - id: calculate_performance_ratio
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: divide_udf }, path: "blob_id" }
       input:
@@ -72,7 +72,7 @@ steps:
 
   # Format metrics summary for display
   - id: format_metrics_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
@@ -98,7 +98,7 @@ steps:
             Focus on actionable business insights that would help a sales manager make strategic decisions."""
 
   - id: format_metrics_summary
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: format_metrics_udf }, path: "blob_id" }
       input:
