--- a/stepflow-rs/tests/python/udf_function.yaml
+++ b/stepflow-rs/tests/python/udf_function.yaml
@@ -17,7 +17,7 @@ output_schema:
       type: object
 steps:
 - id: create_analyze_scores_blob
-  component: builtin://put_blob
+  component: put_blob
   input_schema: null
   output_schema: null
   input:
@@ -39,7 +39,7 @@ steps:
       code: "def analyze_scores(input):\n    scores = [item['score'] for item in input['data']]\n    \n    if not scores:\n        return {\n            'count': 0,\n            'average': 0,\n            'min': 0,\n            'max': 0,\n            'top_performer': None\n        }\n    \n    average = sum(scores) / len(scores)\n    min_score = min(scores)\n    max_score = max(scores)\n    \n    # Find top performer\n    top_performer = None\n    for item in input['data']:\n        if item['score'] == max_score:\n            top_performer = item['name']\n            break\n    \n    return {\n        'count': len(scores),\n        'average': round(average, 2),\n        'min': min_score,\n        'max': max_score,\n        'top_performer': top_performer\n    }\n"
       function_name: analyze_scores
 - id: analyze_scores
-  component: python://udf
+  component: /python/udf
   input_schema: null
   output_schema: null
   input:
