--- a/stepflow-rs/tests/sql-state/simple_workflow.yaml
+++ b/stepflow-rs/tests/sql-state/simple_workflow.yaml
@@ -10,7 +10,7 @@ input:
 
 steps:
   - id: process_message
-    component: mock://identity
+    component: /mock/identity
     input:
       value: {$from: { workflow: input }, path: message }
 
