--- a/stepflow-rs/tests/sql-state/stepflow-config.yml
+++ b/stepflow-rs/tests/sql-state/stepflow-config.yml
@@ -2,7 +2,7 @@ plugins:
   - name: mock
     type: mock
     components:
-      mock://identity:
+      /mock/identity:
         input_schema:
           type: object
           properties:
