--- a/examples/data-pipeline/pipeline.yaml
+++ b/examples/data-pipeline/pipeline.yaml
@@ -14,42 +14,42 @@ input_schema:
 steps:
   # Parallel data processing steps
   - id: sum_revenue_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
           code: "sum(item['revenue'] for item in input['sales_data'])"
 
   - id: calculate_total_revenue
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: sum_revenue_udf }, path: "blob_id" }
       input:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: count_sales_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
           code: "len(input['sales_data'])"
 
   - id: count_sales
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: count_sales_udf }, path: "blob_id" }
       input:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: average_sale_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
           code: "sum(item['revenue'] for item in input['sales_data']) / len(input['sales_data']) if input['sales_data'] else 0"
 
   - id: calculate_average_sale
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: average_sale_udf }, path: "blob_id" }
       input:
@@ -57,14 +57,14 @@ steps:
 
   # This step waits for total_revenue to complete
   - id: divide_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
           code: "input['a'] / input['b'] if input['b'] != 0 else 0"
 
   - id: calculate_performance_ratio
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: divide_udf }, path: "blob_id" }
       input:
@@ -73,49 +73,49 @@ steps:
 
   # Regional analysis using eval components (run in parallel)
   - id: analyze_west_region
-    component: "builtin://eval"
+    component: "eval"
     input:
       workflow:
         $literal:
           name: "West Region Analysis"
           steps:
             - id: filter_west_udf
-              component: "builtin://put_blob"
+              component: "put_blob"
               input:
                 data:
                   $literal:
                     code: "[item for item in input['sales_data'] if item.get('region') == 'West']"
 
             - id: filter_region
-              component: python://udf
+              component: "/python/udf"
               input:
                 blob_id: { $from: { step: filter_west_udf }, path: "blob_id" }
                 input:
                   sales_data: { $from: { workflow: input }, path: "sales_data" }
 
             - id: west_revenue_udf
-              component: "builtin://put_blob"
+              component: "put_blob"
               input:
                 data:
                   $literal:
                     code: "sum(item['revenue'] for item in input['filtered_data'])"
 
             - id: region_revenue
-              component: python://udf
+              component: "/python/udf"
               input:
                 blob_id: { $from: { step: west_revenue_udf }, path: "blob_id" }
                 input:
                   filtered_data: { $from: { step: filter_region }, path: "result" }
 
             - id: west_count_udf
-              component: "builtin://put_blob"
+              component: "put_blob"
               input:
                 data:
                   $literal:
                     code: "len(input['filtered_data'])"
 
             - id: region_count
-              component: python://udf
+              component: "/python/udf"
               input:
                 blob_id: { $from: { step: west_count_udf }, path: "blob_id" }
                 input:
@@ -129,49 +129,49 @@ steps:
         sales_data: { $from: { workflow: input }, path: "sales_data" }
 
   - id: analyze_east_region
-    component: "builtin://eval"
+    component: "eval"
     input:
       workflow:
         $literal:
           name: "East Region Analysis"
           steps:
             - id: filter_east_udf
-              component: "builtin://put_blob"
+              component: "put_blob"
               input:
                 data:
                   $literal:
                     code: "[item for item in input['sales_data'] if item.get('region') == 'East']"
 
             - id: filter_region
-              component: python://udf
+              component: "/python/udf"
               input:
                 blob_id: { $from: { step: filter_east_udf }, path: "blob_id" }
                 input:
                   sales_data: { $from: { workflow: input }, path: "sales_data" }
 
             - id: east_revenue_udf
-              component: "builtin://put_blob"
+              component: "put_blob"
               input:
                 data:
                   $literal:
                     code: "sum(item['revenue'] for item in input['filtered_data'])"
 
             - id: region_revenue
-              component: python://udf
+              component: "/python/udf"
               input:
                 blob_id: { $from: { step: east_revenue_udf }, path: "blob_id" }
                 input:
                   filtered_data: { $from: { step: filter_region }, path: "result" }
 
             - id: east_count_udf
-              component: "builtin://put_blob"
+              component: "put_blob"
               input:
                 data:
                   $literal:
                     code: "len(input['filtered_data'])"
 
             - id: region_count
-              component: python://udf
+              component: "/python/udf"
               input:
                 blob_id: { $from: { step: east_count_udf }, path: "blob_id" }
                 input:
@@ -186,7 +186,7 @@ steps:
 
   # Compare regional performance
   - id: compare_regions_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
@@ -207,7 +207,7 @@ steps:
             }
 
   - id: compare_regions
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: compare_regions_udf }, path: "blob_id" }
       input:
@@ -216,7 +216,7 @@ steps:
 
   # Format metrics for AI analysis (waits for all calculations)
   - id: format_metrics_udf
-    component: "builtin://put_blob"
+    component: "put_blob"
     input:
       data:
         $literal:
@@ -238,7 +238,7 @@ steps:
             Please provide strategic insights and recommendations based on this data."""
 
   - id: format_metrics_summary
-    component: python://udf
+    component: "/python/udf"
     input:
       blob_id: { $from: { step: format_metrics_udf }, path: "blob_id" }
       input:
@@ -251,14 +251,14 @@ steps:
 
   # Format messages for OpenAI (depends on metrics summary)
   - id: create_openai_messages
-    component: "builtin://create_messages"
+    component: "create_messages"
     input:
       system_instructions: "You are a senior sales analyst providing insights based on business metrics and regional performance. Be specific and actionable in your recommendations."
       user_prompt: { $from: { step: format_metrics_summary }, path: "summary" }
 
   # Generate AI insights from the comprehensive metrics
   - id: generate_ai_insights
-    component: "builtin://openai"
+    component: "openai"
     input:
       messages: { $from: { step: create_openai_messages }, path: "messages" }
 
