--- a/stepflow-rs/tests/mock/basic.yaml
+++ b/stepflow-rs/tests/mock/basic.yaml
@@ -14,7 +14,7 @@ output_schema:
       type: integer
 steps:
 - id: step1
-  component: mock://one_output
+  component: /mock/one_output
   input_schema: null
   output_schema: null
   input:
@@ -23,7 +23,7 @@ steps:
         workflow: input
       path: name
 - id: step2
-  component: mock://two_outputs
+  component: /mock/two_outputs
   input_schema: null
   output_schema: null
   input:
