--- a/stepflow-rs/tests/mock/error_fail.yaml
+++ b/stepflow-rs/tests/mock/error_fail.yaml
@@ -7,7 +7,7 @@ output_schema:
       type: string
 steps:
 - id: error
-  component: mock://error
+  component: /mock/error
   input_schema: null
   output_schema: null
   input:
