feat: Switch to path-based routing for components
This allows plugins to be routed to based on arbitrary path patterns
as well as input values.

Also renamed the `stdio` plugin type to `stepflow` to better reflect
it's use as the plugin for using the stepflow protocol.

--- a/examples/data-pipeline/stepflow-config.yml
+++ b/examples/data-pipeline/stepflow-config.yml
@@ -1,7 +1,12 @@
 plugins:
-  - name: python
-    type: stdio
+  python:
+    type: stepflow
     command: uv
     args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
-  - name: builtin
+  builtin:
     type: builtin
+routing:
+  - match: "/python/*"
+    target: python
+  - match: "*"
+    target: builtin
