--- a/examples/basic/stepflow-config.yml
+++ b/examples/basic/stepflow-config.yml
@@ -1,7 +1,12 @@
 plugins:
-  - name: builtin
+  builtin:
     type: builtin
-  - name: python
-    type: stdio
+  python:
+    type: stepflow
     command: uv
     args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
+routing:
+  - match: "/python/*"
+    target: python
+  - match: "*"
+    target: builtin
