--- a/examples/custom-python-components/stepflow-config.yml
+++ b/examples/custom-python-components/stepflow-config.yml
@@ -1,7 +1,12 @@
 plugins:
-  - name: builtin
+  builtin:
     type: builtin
-  - name: custom
-    type: stdio
+  custom:
+    type: stepflow
     command: uv
     args: ["--project", "../../sdks/python", "run", "python", "custom_server.py"]
+routing:
+  - match: "/custom/*"
+    target: custom
+  - match: "*"
+    target: builtin
