--- a/stepflow-rs/crates/stepflow-main/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-main/Cargo.toml
@@ -18,6 +18,7 @@ workspace = true
 [dependencies]
 clap.workspace = true
 error-stack.workspace = true
+indexmap.workspace = true
 rustyline.workspace = true
 serde.workspace = true
 serde_json.workspace = true
