feat: Implement protocol over HTTP+SSE
This follows the pattern of the MCP over HTTP, specifically the client
connects to SSE events (from the server), which then sends an endpoint
to use for client-sent messages. This allows the server to specify a
session ID for the messages.

--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -11,6 +11,13 @@ dependencies = [
     "types-jsonschema>=4.17.0",
 ]
 
+[project.optional-dependencies]
+http = [
+    "fastapi>=0.104.1",
+    "uvicorn>=0.24.0",
+    "sse-starlette>=1.6.5",
+]
+
 [dependency-groups]
 dev = [
     "datamodel-code-generator[http,ruff]>=0.31.2",
