--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -29,6 +29,7 @@ insta-cmd = "0.6.0"
 openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
 regex = "1.11.1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
+reqwest-eventsource = "0.6"
 rustyline = "14.0"
 safer_owning_ref = "0.5.0"
 schemars = { version = "1.0", features = ["indexmap2", "url2", "chrono04"] }
