--- a/stepflow-rs/crates/stepflow-protocol/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-protocol/Cargo.toml
@@ -15,6 +15,8 @@ erased-serde.workspace = true
 error-stack.workspace = true
 futures.workspace = true
 indexmap.workspace = true
+reqwest.workspace = true
+reqwest-eventsource.workspace = true
 schemars.workspace = true
 serde_json.workspace = true
 serde.workspace = true
@@ -29,6 +31,8 @@ which.workspace = true
 
 [dev-dependencies]
 similar-asserts.workspace = true
+stepflow-state.workspace = true
+serde_json.workspace = true
 
 [lints]
 workspace = true
