chore: fix lint/clippy/tests/etc.

--- a/examples/custom-python-components/stepflow-config.yml
+++ b/examples/custom-python-components/stepflow-config.yml
@@ -3,6 +3,7 @@ plugins:
     type: builtin
   custom:
     type: stepflow
+    transport: stdio
     command: uv
     args: ["--project", "../../sdks/python", "run", "python", "custom_server.py"]
 routing:
