--- a/examples/basic/stepflow-config.yml
+++ b/examples/basic/stepflow-config.yml
@@ -3,6 +3,7 @@ plugins:
     type: builtin
   python:
     type: stepflow
+    transport: stdio
     command: uv
     args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
 routing:
