--- a/examples/data-pipeline/stepflow-config.yml
+++ b/examples/data-pipeline/stepflow-config.yml
@@ -1,6 +1,7 @@
 plugins:
   python:
     type: stepflow
+    transport: stdio
     command: uv
     args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
   builtin:
