--- a/.github/actions/rust-build/action.yml
+++ b/.github/actions/rust-build/action.yml
@@ -51,6 +51,23 @@ runs:
         workspaces: |
           stepflow-rs
 
+    # Install UV and Python for HTTP integration tests
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+      with:
+        version: "0.7.5"
+        enable-cache: true
+
+    - name: Set up Python
+      shell: bash
+      run: uv python install
+      working-directory: sdks/python
+
+    - name: Install HTTP optional dependencies
+      shell: bash
+      run: uv sync --extra http
+      working-directory: sdks/python
+
     # Run the full test suite - continue even if it fails so we can run clippy too
     - name: Run Rust tests
       shell: bash
