feat: Allow substitutions in environment variables
This allows the stepflow plugins to reference environment variables
from the stepflow process using `${VAR_NAME}` syntax. The syntax
supports default variables using `${VAR_NAME:-default_value}`.

More sophisticated variable substitution (like nested variables) should
use some form of config file templating rather, but this built-in case
is useful for many common scenarios (eg., referencing the current
directory, secrets, etc.).

--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -43,6 +43,7 @@ similar-asserts = { version = "1.7.0", features = ["serde" ] }
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "sqlite"] }
 static_assertions = "1.1.0"
 stepflow-analysis = { path = "./crates/stepflow-analysis" }
+subst = { version = "0.3" }
 stepflow-builtins = { path = "./crates/stepflow-builtins" }
 stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
 stepflow-core = { path = "./crates/stepflow-core" }
