--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -36,6 +36,7 @@ tokio.workspace = true
 
 # Utilities
 indexmap.workspace = true
+subst.workspace = true
 
 [dev-dependencies]
 # Testing dependencies
