--- a/stepflow-rs/crates/stepflow-protocol/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-protocol/Cargo.toml
@@ -22,6 +22,7 @@ serde_json.workspace = true
 serde.workspace = true
 stepflow-core.workspace = true
 stepflow-plugin.workspace = true
+subst.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
