--- a/examples/file-loading/load-pipeline.yaml
+++ b/examples/file-loading/load-pipeline.yaml
@@ -16,7 +16,7 @@ steps:
   - id: load_sales_data
     component: "load_file"
     input:
-      path: { $from: "$input", path: "data_file_path" }
+      path: { $from: { workflow: input }, path: "data_file_path" }
 
   # Extract the sales_data array using UDF
   - id: extract_sales_udf
@@ -92,8 +92,8 @@ steps:
         b: { $from: { workflow: input }, path: "target_revenue" }
 
 output:
-  file_metadata: { $from: "load_sales_data", path: "metadata" }
-  total_revenue: { $from: "calculate_total_revenue", path: "result" }
-  sales_count: { $from: "count_sales", path: "result" }
-  average_sale: { $from: "calculate_average_sale", path: "result" }
-  performance_ratio: { $from: "calculate_performance_ratio", path: "result" }
+  file_metadata: { $from: { step: "load_sales_data" }, path: "metadata" }
+  total_revenue: { $from: { step: "calculate_total_revenue" }, path: "result" }
+  sales_count: { $from: { step: "count_sales" }, path: "result" }
+  average_sale: { $from: { step: "calculate_average_sale" }, path: "result" }
+  performance_ratio: { $from: { step: "calculate_performance_ratio" }, path: "result" }
