--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -28,6 +28,9 @@ dev = [
     "ruff>=0.9.4",
     "mypy>=1.8.0",
     "deptry>=0.22.0",
+    "fastapi>=0.104.1",
+    "uvicorn>=0.24.0",
+    "sse-starlette>=1.6.5",
 ]
 
 [project.scripts]
