chore: fix types and schema
Main issue was that the `FlowResult` schema wasn't generating a JSON
schema that encoded the discriminant in a way that the Python code
generator supported.

--- a/examples/eval/math-eval.yaml
+++ b/examples/eval/math-eval.yaml
@@ -54,4 +54,6 @@ test:
       outcome: success
       result:
         math_result:
-          sum_result: 8
+          outcome: success
+          result:
+            sum_result: 8
