docs: updates to paths, routes, and invocations to ensure all examples are working

--- a/examples/data-pipeline/stepflow-config.yml
+++ b/examples/data-pipeline/stepflow-config.yml
@@ -6,8 +6,8 @@ plugins:
     args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
   builtin:
     type: builtin
-routing:
-  - match: "/python/*"
-    target: python
-  - match: "*"
-    target: builtin
+routes:
+  "/python/{*component}":
+    - plugin: python
+  "/{*component}":
+    - plugin: builtin
