--- a/examples/custom-python-components/stepflow-config.yml
+++ b/examples/custom-python-components/stepflow-config.yml
@@ -6,8 +6,8 @@ plugins:
     transport: stdio
     command: uv
     args: ["--project", "../../sdks/python", "run", "python", "custom_server.py"]
-routing:
-  - match: "/custom/*"
-    target: custom
-  - match: "*"
-    target: builtin
+routes:
+  "/custom/{*component}":
+    - plugin: custom
+  "/{*component}":
+    - plugin: builtin
