feat: replace HTTP+SSE with Streamable HTTP
This implements the newer Streamable HTTP transport described in the
MCP specification. The main benefit is that each request is sent via
POST and only use SSE for bidirectional communication when the component
uses `context` (indicating it may potentially call methods or send
notifications to the client).

Also adds the ability to start and stop test servers in the workflow
test configuration, allowing the HTTP tranpsort to be tested in
/tests/http.

--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -26,6 +26,7 @@ hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 insta-cmd = "0.6.0"
+nix = { version = "0.29", features = ["process", "signal"] }
 openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
 regex = "1.11.1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
