--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
     "fastapi>=0.104.1",
     "uvicorn>=0.24.0",
     "sse-starlette>=1.6.5",
+    "httpx>=0.25.0",
 ]
 
 [project.scripts]
