--- a/stepflow-rs/crates/stepflow-main/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-main/Cargo.toml
@@ -37,6 +37,7 @@ regex.workspace = true
 reqwest.workspace = true
 walkdir.workspace = true
 similar.workspace = true
+nix.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
