--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -158,3 +158,6 @@ ignore_errors = true
 [[tool.mypy.overrides]]
 module = "stepflow_sdk.generated_protocol"
 ignore_errors = true
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
