--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -11,6 +11,7 @@ resolver = "2"
 members = ["crates/*"]
 
 [workspace.dependencies]
+async-stream = "0.3"
 async-trait = "0.1"
 axum = "0.8"
 bit-set = "0.8.0"
