--- a/stepflow-rs/crates/stepflow-protocol/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-protocol/Cargo.toml
@@ -11,6 +11,7 @@ description = "Types defining the stepflow JSON-RPC protocol."
 doctest = false
 
 [dependencies]
+async-stream.workspace = true
 erased-serde.workspace = true
 error-stack.workspace = true
 futures.workspace = true
