--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -11,6 +11,7 @@ resolver = "2"
 members = ["crates/*"]
 
 [workspace.dependencies]
+async-stream = "0.3"
 async-trait = "0.1"
 axum = "0.8"
 bit-set = "0.8.0"
@@ -26,6 +27,7 @@ hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 insta-cmd = "0.6.0"
+nix = { version = "0.29", features = ["process", "signal"] }
 openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
 regex = "1.11.1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
