--- a/load-tests/workflows/stepflow-config.yml
+++ b/load-tests/workflows/stepflow-config.yml
@@ -5,7 +5,7 @@ plugins:
     type: stepflow
     transport: stdio
     command: uv
-    args: ["--project", "../../sdks/python", "run", "stepflow_sdk"]
+    args: ["--project", "../../sdks/python", "run", "stepflow_py"]
     env:
       OPENAI_API_KEY: "${OPENAI_API_KEY}"
   custom:
