--- a/tests/python/stepflow-config.yml
+++ b/tests/python/stepflow-config.yml
@@ -5,7 +5,7 @@ plugins:
     type: stepflow
     transport: stdio
     command: uv
-    args: [--project, "../../sdks/python", run, stepflow_sdk]
+    args: [--project, "../../sdks/python", run, stepflow_py]
 routes:
   "/python/{component}":
     - plugin: python
