feat: Add comprehensive LangChain integration for StepFlow Python SDK
This adds three approaches for integrating LangChain runnables as StepFlow components:

1. **Decorated Runnable**: Use `@server.langchain_component` decorator
   to register factories as StepFlow components
2. **Named Runnable**: Execute runnables directly by import path using
   `/invoke_named` component
3. **UDF**: Store Python code in blobs that creates LangChain runnables,
   executed via `/udf`

--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -54,6 +54,9 @@ http = [
     "uvicorn>=0.24.0",
     "sse-starlette>=1.6.5",
 ]
+langchain = [
+    "langchain-core>=0.3",
+]
 
 [dependency-groups]
 dev = [
@@ -71,6 +74,7 @@ dev = [
     "openai>=1.97.1",
     "httpx>=0.25.0",
     "pytest-mock>=3.14.1",
+    "langchain-core>=0.3.72",
 ]
 
 [project.scripts]
